# ReaLackey

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build-macos.sh  build.rs
.cargo/: config.toml
.github/: roll_changelog.py
.github/scripts/: build-macos-universal.sh
.github/workflows/: ci.yml  macos-notarization-test.yml  release.yml
cpp/: assistant.rc  resource.h  ui_shim.cpp  ui_shim.h
docs/: macos-notarization.md
src/: app.rs  config.rs  lib.rs  text.rs
src/ai/: mod.rs  protocol.rs  worker.rs
src/dsp/: mod.rs
src/prompts/: mod.rs  registry.rs
src/providers/: mod.rs  models_api.rs  openai_compat.rs  perplexity_agent.rs  registry.rs  sse.rs  transcription.rs
src/providers/anthropic/: mod.rs  stream.rs  types.rs
src/reaper/: action.rs  api.rs  control_surface.rs  history.rs  mod.rs  osara.rs  prompt.rs  reentry.rs
src/tools/: mod.rs
src/ui/: bridge.rs  ffi.rs  input.rs  mod.rs  output.rs  presets_ui.rs  providers_ui.rs  screenshot.rs
