# ReaLackey — an AI assistant deeply integrated into the REAPER DAW.
# Single-process native REAPER extension (cdylib).
[package]
name = "reaper-realackey"
version = "0.3.1"
edition = "2021"
rust-version = "1.80"          # c"..." CStr literals (1.77) + std::sync::LazyLock (1.80, provider registry)
publish = false
license = "MIT OR Apache-2.0"
description = "AI assistant deeply integrated into the REAPER DAW (native Rust extension)."

[lib]
# The output file name MUST start with `reaper_` or REAPER refuses to load it.
name = "reaper_realackey"    # -> reaper_realackey.dll / .dylib / .so
crate-type = ["cdylib"]

[dependencies]
# --- REAPER bindings ---------------------------------------------------------
# crates.io is frozen at 0.1.0 (2020) and reaper-high is unpublished; the master
# API is vastly larger. Pin ALL crates to the SAME git rev (they share a workspace).
# Swap `rev` for `branch = "master"` to track the latest.
reaper-low    = { git = "https://github.com/helgoboss/reaper-rs.git", rev = "955d6a2e8ab3e6ea1251357ee14210cd88d4c2ae" }
reaper-medium = { git = "https://github.com/helgoboss/reaper-rs.git", rev = "955d6a2e8ab3e6ea1251357ee14210cd88d4c2ae" }
reaper-macros = { git = "https://github.com/helgoboss/reaper-rs.git", rev = "955d6a2e8ab3e6ea1251357ee14210cd88d4c2ae" }

# --- Async worker + HTTP/SSE (no Anthropic SDK; raw reqwest+serde) -----------
tokio        = { version = "1", features = ["rt", "rt-multi-thread", "sync", "macros", "time"] }
tokio-util   = { version = "0.7", default-features = false }   # CancellationToken
reqwest      = { version = "0.12", default-features = false, features = ["rustls-tls", "stream", "json"] }
futures-util = { version = "0.3", default-features = false }
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
async-trait  = "0.1"

# --- Main-thread <-> worker channels ----------------------------------------
crossbeam-channel = "0.5"

# --- Secure API-key storage (OS credential store) ---------------------------
# Backend feature is per-target (see below): windows-native / apple-native /
# sync-secret-service. Without a backend keyring degrades gracefully
# (in-memory + env var only).
keyring = "3"

# --- Misc --------------------------------------------------------------------
thiserror = "2"
# Markdown -> clean prose (OSARA announcements) and -> HTML (output pane).
pulldown-cmark = { version = "0.12", default-features = false, features = ["html"] }
# Cross-platform: PNG-encode captured frames + base64 image/audio for the model.
# (Used by the vision capture backends AND the audio clip tool, so not Windows-only.)
png = "0.17"
base64 = "0.22"

# Embedded WebView2 output pane (rendered markdown + collapsible tool cards).
# The wry-backed HTML conversation pane: WebView2 on Windows, WKWebView on macOS,
# hosted as a child of the dialog window. Linux keeps the plain edit-control
# fallback for now. (Gated in code by the `webview` cfg from build.rs.)
[target.'cfg(any(target_os = "windows", target_os = "macos"))'.dependencies]
wry = "0.55"
raw-window-handle = "0.6"

# Windows-only.
[target.'cfg(windows)'.dependencies]
# Seamless Tab focus into/out of the embedded WebView2 (MoveFocus +
# MoveFocusRequested). Same versions wry 0.55 resolves, so the ICoreWebView2*
# types are identical (no cross-version type-identity mismatch).
webview2-com = "0.38"
windows-core = "0.61"
# Phase 7 vision: GDI window capture + SendInput synthetic input.
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
] }
keyring = { version = "3", features = ["windows-native"] }

# macOS: Core Graphics for window/screen capture (CGDisplay) + synthetic input
# (CGEvent). Window geometry / raise go through the SWELL C-shim (cross-platform).
# UNVALIDATED until a macOS CI build compiles this target.
[target.'cfg(target_os = "macos")'.dependencies]
# `highsierra` exposes CGEvent::new_scroll_event (scroll-wheel synthesis).
core-graphics = { version = "0.24", features = ["highsierra"] }
core-foundation = "0.10"
keyring = { version = "3", features = ["apple-native"] }

# Linux: Secret Service credential store (built later; input/capture still stubbed).
[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3", features = ["sync-secret-service"] }

[build-dependencies]
cc             = "1"    # compiles the C++/SWELL shim
embed-resource = "3"    # compiles the Win32 dialog .rc via rc.exe (cc cannot)

[profile.release]
lto = true
codegen-units = 1
